Login and routes

--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "ember-cli-shims": "0.1.1",
     "osf-style": "https://github.com/CenterForOpenScience/osf-style.git#48197d234baf07c321c56edfd9f48b5624374453",
     "bootstrap": "~3.3.5",
-    "bootstrap-sass": "^3.3.7"
+    "bootstrap-sass": "^3.3.7",
+    "font-awesome": "~4.5.0"
   }
 }
