--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "ember-cli-sri": "^2.1.0",
     "ember-cli-test-loader": "^1.1.0",
     "ember-cli-uglify": "^1.2.0",
+    "ember-collection": "1.0.0-alpha.5",
     "ember-data": "^2.8.0",
     "ember-export-application-global": "^1.0.5",
+    "ember-font-awesome": "2.2.0",
     "ember-load-initializers": "^0.5.1",
     "ember-osf": "file:../../ember-osf",
     "ember-page-title": "3.0.9",
