--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "ember-power-select": "1.0.0-beta.19",
     "ember-resolver": "^2.0.3",
     "ember-welcome-page": "^1.0.1",
-    "loader.js": "^4.0.1"
+    "loader.js": "^4.0.1",
+    "solc": "^0.4.2"
   }
 }
