--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "ember-page-title": "3.0.9",
     "ember-power-select": "1.0.0-beta.19",
     "ember-resolver": "^2.0.3",
+    "ember-route-action-helper": "2.0.0",
     "ember-welcome-page": "^1.0.1",
     "loader.js": "^4.0.1",
     "solc": "^0.4.2",
