--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ cache:
 
 before_install:
   - npm config set spin false
+  - npm install -g npm
   - npm install -g bower
   - bower --version
   - npm install phantomjs-prebuilt
