--- a/.travis.yml
+++ b/.travis.yml
@@ -11,15 +11,11 @@ cache:
 
 before_install:
   - npm config set spin false
-  - npm install -g npm
   - npm install -g bower
-  - bower --version
-  - npm install phantomjs-prebuilt
-  - node_modules/phantomjs-prebuilt/bin/phantomjs --version
 
 install:
   - npm install
   - bower install
 
 script:
-  - npm test
+  - npm run check-style && npm test
