--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "ember-export-application-global": "^1.0.5",
     "ember-font-awesome": "2.2.0",
     "ember-load-initializers": "^0.5.1",
-    "ember-osf": "file:../../ember-osf",
+    "ember-osf": "git:https://github.com/CenterForOpenScience/ember-osf",
     "ember-page-title": "3.0.9",
     "ember-power-select": "1.0.0-beta.19",
     "ember-resolver": "^2.0.3",
