--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "ember-data": "^2.8.0",
     "ember-export-application-global": "^1.0.5",
     "ember-font-awesome": "2.2.0",
+    "ember-i18n": "4.3.2",
     "ember-load-initializers": "^0.5.1",
     "ember-osf": "git://github.com/CenterForOpenScience/ember-osf",
     "ember-page-title": "3.0.9",
